# ros_yolo_detector

./: README.md
yolo/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
yolo/scripts/: face_detection (copy).py  face_detection.py  face_detection.py~
